pré-processamento dos dados

--- a/word2vec_treinamento.ipynb
+++ b/word2vec_treinamento.ipynb
@@ -6,7 +6,7 @@
       "name": "word2vec_treinamento.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXbVdLAzHUAQ/OIxUSH/P5",
+      "authorship_tag": "ABX9TyP/wXmUymmqzCwdynRYqBwH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,10 +193,10 @@
         "id": "l5_YWNyWGHTh"
       },
       "source": [
-        "texto = \"Rio de Janeiro é uma cidade maravilhosa\"\n",
+        "texto = \"Rio de 345123767dfdf12 Janeiro é uma cidade maravilhosa\"\n",
         "doc = nlp(texto)"
       ],
-      "execution_count": 6,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -342,10 +342,72 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "hOEK8ZbCNQfK"
+      },
+      "source": [
+        "textos_para_tratamento = (titulos.lower() for titulos in dados_treino[\"title\"])"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0Db6tMXMNNBL"
+      },
+      "source": [
+        "def trata_textos(doc):\n",
+        "  tokens_validos = []\n",
+        "  for token in doc:\n",
+        "    e_valido = not token.is_stop and token.is_alpha\n",
+        "    if e_valido:\n",
+        "      tokens_validos.append(token.text)\n",
+        "  \n",
+        "  if len(tokens_validos) > 2:\n",
+        "    return \" \".join(tokens_validos)"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "HMKofo1vOhAI",
+        "outputId": "749f8a47-5a4f-4291-ae81-7f76a3ed8dd8"
+      },
+      "source": [
+        "trata_textos(doc)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Rio Janeiro cidade maravilhosa'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "FeCrs6XHHJA1"
       },
       "source": [
-        ""
+        "#textos_tratados = "
       ],
       "execution_count": 11,
       "outputs": []
