--- a/word2vec_treinamento.ipynb
+++ b/word2vec_treinamento.ipynb
@@ -6,7 +6,7 @@
       "name": "word2vec_treinamento.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP/wXmUymmqzCwdynRYqBwH",
+      "authorship_tag": "ABX9TyOZasknw+SN6B2Is5oJJ8pb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -404,12 +404,150 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FeCrs6XHHJA1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FeCrs6XHHJA1",
+        "outputId": "3fbb7d7a-92be-4aa9-d75c-4bd073dc3def"
       },
       "source": [
-        "#textos_tratados = "
+        "from time import time \n",
+        "\n",
+        "t0 = time()\n",
+        "textos_tratados = [trata_textos(doc) for doc in nlp.pipe(textos_para_tratamento, batch_size = 1000, n_process = -1)]\n",
+        "tf = time() - t0\n",
+        "print(tf/60)"
       ],
-      "execution_count": 11,
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.6982745051383974\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rCe8Z9XjR05A",
+        "outputId": "2f96b696-e581-4753-b544-cad022b5dd3a"
+      },
+      "source": [
+        "type(nlp)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "spacy.lang.pt.Portuguese"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "VS3cZF3AR2JT",
+        "outputId": "d6c6ee54-8d02-4d98-bfeb-a7cdbab0f616"
+      },
+      "source": [
+        "titulos_tratados = pd.DataFrame({\"titulo\":textos_tratados})\n",
+        "titulos_tratados.head()"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>titulo</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>outro fracasso anunciado</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>paulistanos aproveitam boom vendem acessórios ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>stjd aceita pedido grêmio derruba perda mando ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>frança investiga renault suspeitas fraude emis...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>anos palmeiras vence estreia casa gols</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                              titulo\n",
+              "0                           outro fracasso anunciado\n",
+              "1  paulistanos aproveitam boom vendem acessórios ...\n",
+              "2  stjd aceita pedido grêmio derruba perda mando ...\n",
+              "3  frança investiga renault suspeitas fraude emis...\n",
+              "4             anos palmeiras vence estreia casa gols"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vtQT7usqTotV"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
