hiperparâmetros do Word2Vec

--- a/word2vec_treinamento.ipynb
+++ b/word2vec_treinamento.ipynb
@@ -6,7 +6,7 @@
       "name": "word2vec_treinamento.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZasknw+SN6B2Is5oJJ8pb",
+      "authorship_tag": "ABX9TyMrwppxYa90trglNaAfhNC9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -545,7 +545,11 @@
         "id": "vtQT7usqTotV"
       },
       "source": [
-        ""
+        "from gemsim.models import Word2Vec\n",
+        "\n",
+        "w2v_modelo = Word2Vec(sg = 0,\n",
+        "                      window = 2,\n",
+        "                      size = 300)"
       ],
       "execution_count": null,
       "outputs": []
