avançando nos hiperparâmetros

--- a/word2vec_treinamento.ipynb
+++ b/word2vec_treinamento.ipynb
@@ -6,7 +6,7 @@
       "name": "word2vec_treinamento.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMrwppxYa90trglNaAfhNC9",
+      "authorship_tag": "ABX9TyMO7PwnJ/OmlXEUJf+2CFVh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -545,11 +545,53 @@
         "id": "vtQT7usqTotV"
       },
       "source": [
-        "from gemsim.models import Word2Vec\n",
+        "from gensim.models import Word2Vec\n",
         "\n",
         "w2v_modelo = Word2Vec(sg = 0,\n",
         "                      window = 2,\n",
-        "                      size = 300)"
+        "                      size = 300,\n",
+        "                      min_count = 5,\n",
+        "                      alpha = 0.03,\n",
+        "                      min_alpha = 0.007)"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-23lVyxxWHbR",
+        "outputId": "340f1f7d-9f5e-4ff2-997c-eb3eab43375c"
+      },
+      "source": [
+        "w2v_modelo"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<gensim.models.word2vec.Word2Vec at 0x7f1187c24350>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "REoXOn7kWMOd"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
