--- a/word2vec_classificador.ipynb
+++ b/word2vec_classificador.ipynb
@@ -6,18 +6,12 @@
       "name": "word2vec-classificador.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "mount_file_id": "1xPBNvQ_hnEfyPfe4cqzd_zqR4V77m8e8",
-      "authorship_tag": "ABX9TyPyPDP0REymmsNHvP0rDb5G",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -33,11 +27,11 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "lwFC0pOSITsz",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "E6vbswgocTEB",
-        "outputId": "4a9a9838-d15a-47e6-b969-b283c9fda6c5"
+        "outputId": "fd357b77-bad1-409b-b5cb-e2dcd3771aac"
       },
       "source": [
         "!python -m spacy download pt_core_news_sm"
@@ -50,25 +44,25 @@
             "Requirement already satisfied: pt_core_news_sm==2.2.5 from https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-2.2.5/pt_core_news_sm-2.2.5.tar.gz#egg=pt_core_news_sm==2.2.5 in /usr/local/lib/python3.7/dist-packages (2.2.5)\n",
             "Requirement already satisfied: spacy>=2.2.2 in /usr/local/lib/python3.7/dist-packages (from pt_core_news_sm==2.2.5) (2.2.4)\n",
             "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (1.0.0)\n",
-            "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (2.0.5)\n",
-            "Requirement already satisfied: blis<0.5.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (0.4.1)\n",
             "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (4.41.1)\n",
-            "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (2.23.0)\n",
-            "Requirement already satisfied: plac<1.2.0,>=0.9.6 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (1.1.3)\n",
-            "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (3.0.5)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (56.1.0)\n",
-            "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (0.8.2)\n",
             "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (1.0.5)\n",
+            "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (2.23.0)\n",
             "Requirement already satisfied: thinc==7.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (7.4.0)\n",
             "Requirement already satisfied: numpy>=1.15.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (1.19.5)\n",
+            "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (2.0.5)\n",
+            "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (3.0.5)\n",
+            "Requirement already satisfied: plac<1.2.0,>=0.9.6 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (1.1.3)\n",
             "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (1.0.5)\n",
+            "Requirement already satisfied: blis<0.5.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (0.4.1)\n",
+            "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from spacy>=2.2.2->pt_core_news_sm==2.2.5) (0.8.2)\n",
             "Requirement already satisfied: importlib-metadata>=0.20; python_version < \"3.8\" in /usr/local/lib/python3.7/dist-packages (from catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->pt_core_news_sm==2.2.5) (4.0.1)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->pt_core_news_sm==2.2.5) (2.10)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->pt_core_news_sm==2.2.5) (2020.12.5)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->pt_core_news_sm==2.2.5) (3.0.4)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->pt_core_news_sm==2.2.5) (1.24.3)\n",
-            "Requirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->pt_core_news_sm==2.2.5) (3.7.4.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->pt_core_news_sm==2.2.5) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3.0.0,>=2.13.0->spacy>=2.2.2->pt_core_news_sm==2.2.5) (2.10)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->pt_core_news_sm==2.2.5) (3.4.1)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4; python_version < \"3.8\" in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.2.2->pt_core_news_sm==2.2.5) (3.7.4.3)\n",
             "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
             "You can now load the model via spacy.load('pt_core_news_sm')\n"
           ],
@@ -79,7 +73,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rqPa5CtecgtZ"
+        "id": "bx8rtu0JZiMx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kmUZvse1UCVb"
       },
       "source": [
         "import spacy\n",
@@ -88,9 +93,9 @@
         "from gensim.models import KeyedVectors\n",
         "\n",
         "w2v_modelo_cbow = KeyedVectors.load_word2vec_format(\"/content/drive/MyDrive/Colab Notebooks/modelo_cbow.txt\")\n",
-        "w2v_modelo_sg = KeyedVectors.load_word2vec_format(\"/content/drive/MyDrive/Colab Notebooks/modelo_skipgram.txt\")\n",
-        "artigo_treino = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/treino.csv\")\n",
-        "artigo_teste = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/teste.csv\")"
+        "w2v_modelo_sg = KeyedVectors.load_word2vec_format(\"/content/drive/My Drive/Colab Notebooks/modelo_skipgram.txt\")\n",
+        "artigo_treino = pd.read_csv(\"/content/drive/My Drive/Colab Notebooks/treino.csv\")\n",
+        "artigo_teste = pd.read_csv(\"/content/drive/My Drive/Colab Notebooks/teste.csv\")"
       ],
       "execution_count": 2,
       "outputs": []
@@ -98,11 +103,11 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "0X5lI4-NSlRI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "mCZEXt_gdhAl",
-        "outputId": "728df4bb-0d21-4ca0-90ce-3e54f2a933cc"
+        "outputId": "672fcd35-9f4e-4b61-8f5c-d8d1ac82531a"
       },
       "source": [
         "nlp = spacy.load(\"pt_core_news_sm\", disable=[\"paser\", \"ner\", \"tagger\", \"textcat\"])\n",
@@ -137,11 +142,11 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "2_GCypILSVga",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "CaixD1kpdip9",
-        "outputId": "c54cbc25-3aec-4012-f26d-cf2f1de56dc0"
+        "outputId": "7cb72392-59d8-4586-8bbe-3dd8072a598c"
       },
       "source": [
         "def combinacao_de_vetores_por_soma(palavras, modelo):\n",
@@ -226,11 +231,11 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CSXjHM9sSQY8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "qbsuK-F5dqC9",
-        "outputId": "1d452add-98d8-4480-9db3-ccad8bfe6b0e"
+        "outputId": "407eeb14-7fc6-47e0-8f30-9d9b7da4accb"
       },
       "source": [
         "def matriz_vetores(textos, modelo):\n",
@@ -247,7 +252,7 @@
         "matriz_vetores_treino_cbow = matriz_vetores(artigo_treino.title, w2v_modelo_cbow)\n",
         "matriz_vetores_teste_cbow = matriz_vetores(artigo_teste.title, w2v_modelo_cbow)\n",
         "print(matriz_vetores_treino_cbow.shape)\n",
-        "print(matriz_vetores_teste_cbow.shape)"
+        "print(matriz_vetores_teste_cbow.shape) "
       ],
       "execution_count": 5,
       "outputs": [
@@ -260,6 +265,137 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tr5VDmj3lkf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "297f6828-8af6-4c3e-b5f6-10d6f553ef5e"
+      },
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "def classificador(modelo, x_treino, y_treino, x_teste, y_teste):\n",
+        "\n",
+        "    RL = LogisticRegression(max_iter = 800)\n",
+        "    RL.fit(x_treino, y_treino)\n",
+        "    categorias = RL.predict(x_teste)\n",
+        "    resultados = classification_report(y_teste, categorias)\n",
+        "    print(resultados)\n",
+        "    \n",
+        "    return RL\n",
+        "\n",
+        "RL_cbow = classificador(w2v_modelo_cbow,\n",
+        "                        matriz_vetores_treino_cbow,\n",
+        "                        artigo_treino.category,\n",
+        "                        matriz_vetores_teste_cbow,\n",
+        "                        artigo_teste.category)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "     colunas       0.80      0.71      0.76      6103\n",
+            "   cotidiano       0.64      0.80      0.71      1698\n",
+            "     esporte       0.93      0.86      0.89      4663\n",
+            "   ilustrada       0.12      0.81      0.21       131\n",
+            "     mercado       0.84      0.78      0.81      5867\n",
+            "       mundo       0.74      0.83      0.78      2051\n",
+            "\n",
+            "    accuracy                           0.79     20513\n",
+            "   macro avg       0.68      0.80      0.69     20513\n",
+            "weighted avg       0.82      0.79      0.80     20513\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WlKOJ9AGsseD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2dbb0c37-6607-422f-9890-3d07f7499044"
+      },
+      "source": [
+        "matriz_vetores_treino_sg = matriz_vetores(artigo_treino.title, w2v_modelo_sg)\n",
+        "matriz_vetores_teste_sg = matriz_vetores(artigo_teste.title, w2v_modelo_sg)\n",
+        "\n",
+        "RL_sg = classificador(w2v_modelo_sg,\n",
+        "                        matriz_vetores_treino_sg,\n",
+        "                        artigo_treino.category,\n",
+        "                        matriz_vetores_teste_sg,\n",
+        "                        artigo_teste.category)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "     colunas       0.81      0.71      0.76      6103\n",
+            "   cotidiano       0.64      0.81      0.72      1698\n",
+            "     esporte       0.93      0.88      0.90      4663\n",
+            "   ilustrada       0.14      0.89      0.25       131\n",
+            "     mercado       0.84      0.79      0.81      5867\n",
+            "       mundo       0.75      0.84      0.79      2051\n",
+            "\n",
+            "    accuracy                           0.79     20513\n",
+            "   macro avg       0.69      0.82      0.70     20513\n",
+            "weighted avg       0.82      0.79      0.80     20513\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q8mAwV5ctfxI"
+      },
+      "source": [
+        "import pickle\n",
+        "\n",
+        "with open(\"/content/drive/My Drive/Colab Notebooks/rl_cbow.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(RL_cbow, f)"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Y6OxXfNwzuz"
+      },
+      "source": [
+        "with open(\"/content/drive/My Drive/Colab Notebooks/rl_sg.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(RL_sg, f)"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G_7AzIj_w8Hb"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 9,
+      "outputs": []
     }
   ]
 }
